finalizo resumen del primer libro

--- a/lp01.md
+++ b/lp01.md
@@ -2,3 +2,5 @@
 
 El nino huerfano **larry* vive con sus tios que le tratan muy bien (le hacen usar * internet explorer*)
 Tiene unas *google glasses* redondas y una *citatriz* en la frente
+
+Un dia aparece **Luis** y le dice que el tambien puede ser un *hcker*
